--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -70,14 +70,14 @@
     <Button
         android:id="@+id/get_code"
         android:layout_width="wrap_content"
-        android:layout_height="48dp"
+        android:background="@drawable/register_btn_bg"
         android:gravity="center"
         android:text="获取验证码"
         android:textSize="13sp"
         app:layout_constraintBottom_toBottomOf="@+id/code"
         app:layout_constraintRight_toRightOf="@+id/tel"
-        app:layout_constraintTop_toTopOf="@+id/code"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        android:layout_height="42dp" />
 
     <Button
         android:id="@+id/register"
