--- a/app/src/main/res/drawable/icon_store.xml
+++ b/app/src/main/res/drawable/icon_store.xml
@@ -1,12 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/icon_store_bai"
-        android:state_checked="true"
-        android:state_focused="true"
-        android:state_selected="true"
-        android:state_activated="true"
-        android:state_enabled="true"
-        android:state_pressed="true"
-        android:state_window_focused="true"/>
-    <item android:drawable="@drawable/icon_store_hui" />
+    <item android:drawable="@drawable/icon_store_bai" android:state_activated="true" android:state_checked="true" android:state_enabled="true" android:state_focused="true" android:state_pressed="true" android:state_selected="true" android:state_window_focused="true" />
+    <item android:drawable="@drawable/icon_store_hui" android:state_selected="false" />
 </selector>
