--- a/app/src/main/res/drawable/icon_yundong.xml
+++ b/app/src/main/res/drawable/icon_yundong.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@drawable/icon_yundong_bai" android:state_checked="true" android:state_focused="true" />
-    <item android:drawable="@drawable/icon_yundong_hui" />
+    <item android:drawable="@drawable/icon_yundong_hui" android:state_selected="false" />
 </selector>
