--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -69,13 +69,13 @@
     <Button
         android:id="@+id/send_code"
         android:layout_width="wrap_content"
-        android:layout_height="48dp"
+        android:layout_height="42dp"
+        android:background="@drawable/register_btn_bg"
         android:gravity="center"
         android:text="获取验证码"
         android:textSize="13sp"
         app:layout_constraintBottom_toBottomOf="@+id/code"
         app:layout_constraintRight_toRightOf="@+id/tel"
-        app:layout_constraintTop_toTopOf="@+id/code"
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
