--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -79,7 +79,9 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="200"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:text="123456789012"
                 android:textAlignment="center"
                 android:textColor="#FFFFFF"
                 android:textSize="26sp"
@@ -91,7 +93,9 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="0.38Km"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:text="888888.38Km"
                 android:textAlignment="center"
                 android:textColor="#FFFFFF"
                 android:textSize="26sp" />
