--- a/app/src/main/res/layout/layout_coin_list_item.xml
+++ b/app/src/main/res/layout/layout_coin_list_item.xml
@@ -24,6 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="9dp"
         android:contentDescription="@null"
         android:src="@drawable/icon_location"
         android:visibility="invisible"
