--- a/app/src/main/res/layout/layout_week_record_item.xml
+++ b/app/src/main/res/layout/layout_week_record_item.xml
@@ -20,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:textColor="#EDEDED"
+        android:textColor="#808080"
         android:textSize="18sp" />
 
     <TextView
