--- a/app/src/main/res/layout/activity_run_config.xml
+++ b/app/src/main/res/layout/activity_run_config.xml
@@ -9,29 +9,117 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.runnerfun.run.RunConfigActivity">
+    android:background="#c000"
+    tools:context="com.runnerfun.RunConfigActivity">
 
-    <CheckBox
+    <ImageView
+        android:src="@drawable/btn_ok"
         android:text="语音提示"
+        android:textColor="#fff"
         android:layout_width="163dp"
         android:layout_height="43dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/use_voice"
-        tools:layout_editor_absoluteY="63dp"
+        android:id="@+id/ok"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="80dp"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <CheckBox
-        android:text="倒计时"
-        android:layout_width="163dp"
-        android:layout_height="37dp"
-        android:id="@+id/count_down"
-        app:layout_constraintLeft_toLeftOf="@+id/use_voice"
-        app:layout_constraintRight_toRightOf="@+id/use_voice"
-        android:layout_marginTop="48dp"
-        app:layout_constraintTop_toBottomOf="@+id/use_voice"
-        app:layout_constraintHorizontal_bias="0.0" />
+    <TextView
+        android:text="隐身"
+        android:textColor="#fff"
+        android:textSize="20sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView2"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="56dp"
+        android:layout_marginLeft="56dp"
+        android:layout_marginTop="72dp"
+        app:layout_constraintTop_toBottomOf="@+id/ok" />
+
+    <TextView
+        android:text="语音提示"
+        android:textColor="#fff"
+        android:textSize="20sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView3"
+        app:layout_constraintRight_toRightOf="@+id/textView2"
+        app:layout_constraintLeft_toLeftOf="@+id/textView2"
+        app:layout_constraintHorizontal_bias="0.05"
+        android:layout_marginTop="40dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <TextView
+        android:text="跑前倒计时"
+        android:textColor="#fff"
+        android:textSize="20sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView4"
+        app:layout_constraintLeft_toLeftOf="@+id/textView3"
+        android:layout_marginTop="32dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+    <TextView
+        android:text="地图类型"
+        android:textColor="#fff"
+        android:textSize="20sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView5"
+        app:layout_constraintLeft_toLeftOf="@+id/textView4"
+        android:layout_marginTop="40dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+
+    <Spinner
+        android:layout_width="118dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/countdown"
+        app:layout_constraintTop_toTopOf="@+id/textView4"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="16dp"
+        app:layout_constraintLeft_toLeftOf="@+id/voice_notice"
+        app:layout_constraintBottom_toBottomOf="@+id/textView4"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <Spinner
+        android:layout_width="123dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/map_type"
+        app:layout_constraintRight_toRightOf="@+id/countdown"
+        app:layout_constraintTop_toTopOf="@+id/textView5"
+        app:layout_constraintBottom_toBottomOf="@+id/textView5"
+        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="@+id/countdown" />
+
+    <Switch
+        android:text=""
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/hide_online"
+        android:layout_marginEnd="64dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="64dp"
+        app:layout_constraintTop_toTopOf="@+id/textView2"
+        app:layout_constraintBottom_toBottomOf="@+id/textView2"
+        app:layout_constraintVertical_bias="0.33" />
+
+    <Switch
+        android:text=""
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/voice_notice"
+        app:layout_constraintLeft_toLeftOf="@+id/hide_online"
+        app:layout_constraintRight_toRightOf="@+id/hide_online"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintTop_toTopOf="@+id/textView3"
+        app:layout_constraintBottom_toBottomOf="@+id/textView3"
+        app:layout_constraintVertical_bias="0.33" />
 
 </android.support.constraint.ConstraintLayout>
