--- a/app/src/main/res/layout/activity_share.xml
+++ b/app/src/main/res/layout/activity_share.xml
@@ -1,33 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_share"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#E8E9E8"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     tools:context="com.runnerfun.ShareActivity">
 
     <EditText
-        android:hint="请输入文字..."
+        android:id="@+id/content"
         android:layout_width="match_parent"
         android:layout_height="137dp"
-        android:id="@+id/content"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:background="#0f0"
+        android:layout_marginTop="16dp"
         android:gravity="top"
-        android:layout_marginTop="16dp" />
+        android:hint="请输入文字..."
+        android:padding="5dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <ImageView
+        android:id="@+id/choose_image"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:layout_marginTop="56dp"
         android:scaleType="fitXY"
         android:src="@drawable/copy"
-        android:id="@+id/choose_image"
         app:layout_constraintLeft_toLeftOf="@+id/content"
-        android:layout_marginTop="56dp"
-        app:layout_constraintTop_toBottomOf="@+id/content" />
+        app:layout_constraintTop_toBottomOf="@+id/content"/>
 </android.support.constraint.ConstraintLayout>
