--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -52,7 +52,7 @@
             />
     </com.runnerfun.widget.MapBtnWidget>
 
-    <com.amap.api.maps2d.MapView
+    <com.amap.api.maps.MapView
         android:id="@+id/map"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -61,7 +61,7 @@
         android:layout_above="@id/panel"
         android:layout_alignParentStart="true">
 
-    </com.amap.api.maps2d.MapView>
+    </com.amap.api.maps.MapView>
 
     <ImageView
         android:layout_width="80dp"
