--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="table_unchecked">#fff</color>
     <color name="table_checked">#000</color>
+    <color name="transparent_background">#f0000000</color>
 </resources>
