--- a/app/src/main/res/layout/activity_run_config.xml
+++ b/app/src/main/res/layout/activity_run_config.xml
@@ -1,125 +1,157 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_run_config"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="#c000"
+    android:background="@color/transparent_background"
     tools:context="com.runnerfun.RunConfigActivity">
 
     <ImageView
-        android:src="@drawable/btn_ok"
-        android:text="语音提示"
-        android:textColor="#fff"
+        android:id="@+id/ok"
         android:layout_width="163dp"
         android:layout_height="43dp"
-        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/ok"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_alignParentTop="true"
         android:layout_marginTop="80dp"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:src="@drawable/btn_ok"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="53dp"
+        android:layout_marginStart="53dp"
+        android:layout_marginTop="90dp"
         android:text="隐身"
         android:textColor="#fff"
-        android:textSize="20sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView2"
+        android:textSize="18sp"
+        android:visibility="invisible"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginStart="56dp"
-        android:layout_marginLeft="56dp"
-        android:layout_marginTop="72dp"
-        app:layout_constraintTop_toBottomOf="@+id/ok" />
+        app:layout_constraintTop_toBottomOf="@+id/ok"/>
 
     <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="语音提示"
         android:textColor="#fff"
-        android:textSize="20sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView3"
-        app:layout_constraintRight_toRightOf="@+id/textView2"
-        app:layout_constraintLeft_toLeftOf="@+id/textView2"
+        android:textSize="18sp"
         app:layout_constraintHorizontal_bias="0.05"
-        android:layout_marginTop="40dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintLeft_toLeftOf="@+id/textView2"
+        app:layout_constraintRight_toRightOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"/>
 
     <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
         android:text="跑前倒计时"
         android:textColor="#fff"
-        android:textSize="20sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView4"
+        android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="@+id/textView3"
-        android:layout_marginTop="32dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@+id/textView3"/>
 
     <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
         android:text="地图类型"
         android:textColor="#fff"
-        android:textSize="20sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView5"
+        android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="@+id/textView4"
-        android:layout_marginTop="40dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintTop_toBottomOf="@+id/textView4"/>
 
     <Spinner
-        android:layout_width="118dp"
-        android:layout_height="wrap_content"
         android:id="@+id/countdown"
-        app:layout_constraintTop_toTopOf="@+id/textView4"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="16dp"
-        app:layout_constraintLeft_toLeftOf="@+id/voice_notice"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#00000000"
+        android:gravity="right"
         app:layout_constraintBottom_toBottomOf="@+id/textView4"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintRight_toLeftOf="@+id/cd_arror"
+        app:layout_constraintTop_toTopOf="@+id/textView4"
+        app:layout_constraintVertical_bias="0.0"/>
 
     <Spinner
-        android:layout_width="123dp"
-        android:layout_height="wrap_content"
         android:id="@+id/map_type"
-        app:layout_constraintRight_toRightOf="@+id/countdown"
-        app:layout_constraintTop_toTopOf="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#00000000"
+        android:gravity="right"
         app:layout_constraintBottom_toBottomOf="@+id/textView5"
-        app:layout_constraintVertical_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="@+id/countdown" />
+        app:layout_constraintRight_toLeftOf="@+id/mt_arror"
+        app:layout_constraintTop_toTopOf="@+id/textView5"
+        app:layout_constraintVertical_bias="0.0"/>
 
     <Switch
-        android:text=""
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/hide_online"
-        android:layout_marginEnd="64dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="64dp"
-        app:layout_constraintTop_toTopOf="@+id/textView2"
-        app:layout_constraintBottom_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.33" />
-
-    <Switch
-        android:text=""
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="64dp"
+        android:layout_marginRight="64dp"
+        android:text=""
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/textView2"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textView2"
+        app:layout_constraintVertical_bias="0.32999998"/>
+
+    <ImageView
         android:id="@+id/voice_notice"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="53dp"
+        android:layout_marginRight="53dp"
+        android:src="@drawable/switch_btn_off"
+        app:layout_constraintBottom_toBottomOf="@+id/textView3"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textView3"
+        app:layout_constraintVertical_bias="0.33"/>
+
+    <ImageView
+        android:id="@+id/cd_arror"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="53dp"
+        android:layout_marginRight="53dp"
+        android:layout_marginTop="8dp"
+        android:src="@drawable/icon_down"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/countdown"/>
+
+    <ImageView
+        android:id="@+id/mt_arror"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="53dp"
+        android:layout_marginRight="53dp"
+        android:layout_marginTop="8dp"
+        android:src="@drawable/icon_down"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/map_type"/>
+
+    <!--<Switch
+        android:id="@+id/voice_notice"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        app:layout_constraintBottom_toBottomOf="@+id/textView3"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="@+id/hide_online"
         app:layout_constraintRight_toRightOf="@+id/hide_online"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintTop_toTopOf="@+id/textView3"
-        app:layout_constraintBottom_toBottomOf="@+id/textView3"
-        app:layout_constraintVertical_bias="0.33" />
+        app:layout_constraintVertical_bias="0.33"/>-->
 
 </android.support.constraint.ConstraintLayout>
