--- a/app/src/main/res/layout/activity_user_setting.xml
+++ b/app/src/main/res/layout/activity_user_setting.xml
@@ -47,6 +47,7 @@
             android:layout_marginLeft="12dp"
             android:layout_marginRight="12dp"
             android:layout_marginStart="12dp"
+            android:visibility="gone"
             android:background="@drawable/edit_text_bg">
 
             <TextView
@@ -109,6 +110,7 @@
             android:layout_marginLeft="12dp"
             android:layout_marginRight="12dp"
             android:layout_marginStart="12dp"
+            android:visibility="gone"
             android:background="@drawable/edit_text_bg">
 
             <TextView
@@ -140,6 +142,7 @@
             android:layout_marginLeft="12dp"
             android:layout_marginRight="12dp"
             android:layout_marginStart="12dp"
+            android:visibility="gone"
             android:background="@drawable/edit_text_bg">
 
             <TextView
@@ -232,6 +235,7 @@
             android:layout_marginLeft="12dp"
             android:layout_marginRight="12dp"
             android:layout_marginStart="12dp"
+            android:visibility="gone"
             android:background="@drawable/edit_text_bg">
 
             <TextView
