--- a/app/src/main/res/layout/dropdown_item.xml
+++ b/app/src/main/res/layout/dropdown_item.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:textColor="#fff"
-    android:textSize="18sp"
-    android:gravity="right"
-    android:background="#c000"
-    android:paddingLeft="3dp"
-    >
-
-</TextView>
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:background="@color/transparent_background"
+          android:gravity="right|center_vertical"
+          android:paddingBottom="20dp"
+          android:paddingLeft="5dp"
+          android:paddingRight="15dp"
+          android:textColor="#fff"
+          android:textSize="18sp"/>
