--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,9 +8,9 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
-    <style name="PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 
     <style name="EditTextStyle">
         <item name="android:background">@drawable/edit_text_bg</item>
@@ -25,6 +25,16 @@
         <item name="android:textColor">#FFF</item>
         <item name="android:textColorHint">#FFF</item>
         <item name="android:gravity">center</item>
+    </style>
+
+    <style name="Transparent">
+        <item name="android:windowBackground">
+            @color/transparent_background
+        </item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowAnimationStyle">
+            @android:style/Animation.Translucent
+        </item>
     </style>
 
 </resources>
