--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -107,7 +107,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginStart="16dp"
-            android:src="@drawable/wei"
+            android:src="@drawable/icon_wei"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.2"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -121,7 +121,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
-            android:src="@drawable/qq"
+            android:src="@drawable/icon_qq"
             app:layout_constraintBottom_toBottomOf="@+id/login_weixin"
             app:layout_constraintLeft_toRightOf="@+id/login_weixin"
             app:layout_constraintRight_toLeftOf="@+id/login_weibo"
