--- a/app/src/main/res/layout/activity_share_elem.xml
+++ b/app/src/main/res/layout/activity_share_elem.xml
@@ -5,16 +5,57 @@
     android:id="@+id/activity_share_elem"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.runnerfun.ShareElemActivity">
+
+    <RelativeLayout
+        android:id="@+id/relativeLayout"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="#000">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dip"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:singleLine="false"
+            android:text="水印照片"
+            android:textColor="#FFF"
+            android:textSize="16sp"/>
+
+        <ImageView
+            android:id="@+id/cancel_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:contentDescription="@null"
+            android:paddingLeft="15dip"
+            android:paddingRight="15dip"
+            android:scaleType="fitCenter"
+            android:src="@drawable/return_btn"/>
+
+        <TextView
+            android:id="@+id/save_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:layout_margin="10dip"
+            android:gravity="center"
+            android:text="保存"
+            android:textColor="#FFF"
+            android:textSize="16sp"/>
+
+    </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/share_image"
         android:layout_width="match_parent"
-        android:layout_height="300dp">
+        android:layout_height="300dp"
+        android:layout_below="@id/relativeLayout"
+        android:layout_marginEnd="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginStart="15dp">
 
         <ImageView
             android:id="@+id/background_image"
@@ -114,6 +155,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/share_image"
+        android:layout_marginEnd="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginStart="15dp"
         android:layout_marginTop="10dp"/>
 
 </RelativeLayout>
