--- a/app/src/main/res/layout/activity_run_config.xml
+++ b/app/src/main/res/layout/activity_run_config.xml
@@ -74,7 +74,8 @@
         android:id="@+id/countdown"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#00000000"
+        android:background="@color/transparent_background"
+        android:popupBackground="@color/transparent_background"
         android:gravity="right"
         app:layout_constraintBottom_toBottomOf="@+id/textView4"
         app:layout_constraintRight_toLeftOf="@+id/cd_arror"
@@ -85,7 +86,8 @@
         android:id="@+id/map_type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#00000000"
+        android:background="@color/transparent_background"
+        android:popupBackground="@color/transparent_background"
         android:gravity="right"
         app:layout_constraintBottom_toBottomOf="@+id/textView5"
         app:layout_constraintRight_toLeftOf="@+id/mt_arror"
