--- a/app/src/main/res/layout/layout_coin_list_item.xml
+++ b/app/src/main/res/layout/layout_coin_list_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -9,14 +10,17 @@
         android:id="@+id/coin_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="26dp"
-        android:layout_marginStart="26dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="16dp"
+        android:ellipsize="end"
         android:gravity="center_horizontal"
+        android:maxEms="3"
+        android:minEms="3"
         android:textColor="#E60012"
         android:textSize="32sp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <ImageView
         android:id="@+id/image_location"
@@ -29,7 +33,7 @@
         android:src="@drawable/icon_location"
         android:visibility="invisible"
         app:layout_constraintLeft_toRightOf="@+id/coin_value"
-        app:layout_constraintTop_toTopOf="@+id/coin_value" />
+        app:layout_constraintTop_toTopOf="@+id/coin_value"/>
 
     <TextView
         android:id="@+id/coin_detail"
@@ -47,7 +51,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/coin_value"
         app:layout_constraintLeft_toRightOf="@+id/image_location"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/coin_value" />
+        app:layout_constraintTop_toTopOf="@+id/coin_value"/>
 
     <TextView
         android:id="@+id/coin_title"
@@ -62,7 +66,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="@+id/coin_value"
         app:layout_constraintRight_toRightOf="@+id/coin_value"
-        app:layout_constraintTop_toBottomOf="@+id/coin_value" />
+        app:layout_constraintTop_toBottomOf="@+id/coin_value"/>
 
     <TextView
         android:id="@+id/coin_time"
@@ -73,6 +77,6 @@
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/coin_title"
         app:layout_constraintLeft_toLeftOf="@+id/coin_detail"
-        app:layout_constraintTop_toTopOf="@+id/coin_title" />
+        app:layout_constraintTop_toTopOf="@+id/coin_title"/>
 
 </android.support.constraint.ConstraintLayout>
